--- a/02-app-from-yaml-manifests/ingress.yaml
+++ b/02-app-from-yaml-manifests/ingress.yaml
@@ -7,7 +7,7 @@ kind: Ingress
   spec:
     rules:
     # change host as per your ingress
-    - host: 127.0.0.1
+    - host: localhost
       http:
         paths:
         - backend:
