--- a/02-app-from-yaml-manifests/ingress.yaml
+++ b/02-app-from-yaml-manifests/ingress.yaml
@@ -1,13 +1,12 @@
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
-  metadata:
-    name: sample-ingress
-    annotations:
-      kubernetes.io/ingress.class: nginx
-  spec:
-    rules:
-    # change host as per your ingress
+metadata:
+  name: sample-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
+spec:
+  rules:
     - host: localhost
       http:
         paths:
