--- a/02-app-from-yaml-manifests/ingress.yaml
+++ b/02-app-from-yaml-manifests/ingress.yaml
@@ -10,6 +10,10 @@ spec:
     - host: localhost
       http:
         paths:
-        - backend:
-            serviceName: sample-service
-            servicePort: 80
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: sample-service
+                port:
+                  number: 80
