--- a/02-app-from-yaml-manifests/ingress.yaml
+++ b/02-app-from-yaml-manifests/ingress.yaml
@@ -7,12 +7,10 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
-    - host: localhost
+    - host: sample.docker.internal
       http:
         paths:
-          - path: /
-            pathType: Prefix
-            backend:
+          - backend:
               service:
                 name: sample-service
                 port:
