--- a/02-app-from-yaml-manifests/ingress.yaml
+++ b/02-app-from-yaml-manifests/ingress.yaml
@@ -10,7 +10,9 @@ spec:
     - host: sample.docker.internal
       http:
         paths:
-          - backend:
+          - path: /
+            pathType: Prefix
+            backend:
               service:
                 name: sample-service
                 port:
