--- a/02-app-from-yaml-manifests/ingress.yaml
+++ b/02-app-from-yaml-manifests/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
-    - host: sample.docker.internal
+    - host: localhost
       http:
         paths:
           - path: /
