--- a/02-app-from-yaml-manifests/ingress.yaml
+++ b/02-app-from-yaml-manifests/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   name: sample-ingress
 spec:
   rules:
-    - host: sample.docker.internal
+    - host: localhost
       http:
         paths:
           - path: /
